Completely removed rxJava.  ALso a minor functional change: added check for if(tableData.getDataModel() != null) in SearchAdapter.getTableData.